friend -> chat 대화창 똑같이

--- a/friends.html
+++ b/friends.html
@@ -42,7 +42,7 @@
     <main class="friends">
       <header class="friends__header">
         <div class="friends__friend friend friend--lg">
-          <div class="friedn__column">
+          <div class="friend__column">
             <img
               class="g-avatar friend__avatar friend--lg"
               src="images/avatar.png"
