--- a/index.html
+++ b/index.html
@@ -46,16 +46,25 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <div class="chat__content">
-                <img class="chat__avatar g-avatar" src="images/avatar.png" />
-                <span class="chat__username">Quokka</span>
-                <span class="chat__preview">Going home</span>
+            <li class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img
+                  class="g-avatar friend__avatar friend--lg"
+                  src="images/avatar.png"
+                />
+                <div class="friend__content">
+                  <span class="friend__name">uj</span>
+                  <span class="friend__bottom-text"> later </span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
-            </div>
+              <div class="friend__column">
+                <div class="friend__now-listening">
+                  <span class="chat__timestamp">
+                    March 24
+                  </span>
+                </div>
+              </div>
+            </li>
           </a>
         </li>
       </ul>
