css find, friend, more, friends

--- a/friends.html
+++ b/friends.html
@@ -43,10 +43,7 @@
       <header class="friends__header">
         <div class="friends__friend friend friend--lg">
           <div class="friend__column">
-            <img
-              class="g-avatar friend__avatar friend--lg"
-              src="images/avatar.png"
-            />
+            <img class="g-avatar friend__avatar" src="images/avatar.png" />
             <div class="friend__content">
               <span class="friend__name">Quokka</span>
               <span class="friend__status"> holding on to gravity </span>
@@ -58,7 +55,7 @@
         <h5 class="friends__title">Plus Friend</h5>
         <div class="friends__friend friend">
           <div class="friend__column">
-            <img class="g-avatar friend__avatar" src="images/avatar.png" />
+            <img class="friend__avatar" src="images/avatar.png" />
             <div class="friend__content">
               <span class="friend__name">Plus Friend</span>
             </div>
@@ -69,10 +66,7 @@
         <h5 class="friends__title">Friends 30</h5>
         <li class="friends__friend friend">
           <div class="friend__column">
-            <img
-              class="g-avatar friend__avatar friend--lg"
-              src="images/avatar.png"
-            />
+            <img class="friend__avatar friend--lg" src="images/avatar.png" />
             <div class="friend__content">
               <span class="friend__name">rebecca</span>
               <span class="friend__status"> seaside </span>
@@ -80,8 +74,7 @@
           </div>
           <div class="friend__column">
             <div class="friend__now-listening">
-              <span>seaside-Kooks</span>
-              <i class="fas fa-play"></i>
+              <span>seaside - The Kooks <i class="fas fa-play"></i></span>
             </div>
           </div>
         </li>
