--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <ul class="chats__list">
         <li class="chats__chat chat">
           <a href="chat.html">
-            <li class="chats__chat friend friend--lg">
+            <div class="chats__chat friend friend--lg">
               <div class="friend__column">
                 <img
-                  class="g-avatar friend__avatar friend--lg"
+                  class="m-avatar friend__avatar friend--lg"
                   src="images/avatar.png"
                 />
                 <div class="friend__content">
@@ -58,13 +58,11 @@
                 </div>
               </div>
               <div class="friend__column">
-                <div class="friend__now-listening">
-                  <span class="chat__timestamp">
-                    March 24
-                  </span>
-                </div>
+                <span class="chat__timestamp">
+                  March 24
+                </span>
               </div>
-            </li>
+            </div>
           </a>
         </li>
       </ul>
