--- a/more.html
+++ b/more.html
@@ -88,15 +88,21 @@
         <h5 class="more__title">Suggestion</h5>
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestion">
-            <i class="fas fa-quote-right fa-2x"></i>
+            <span class="suggestion__icon">
+              <i class="fas fa-quote-right"></i>
+            </span>
             <span class="suggestion__title">Story</span>
           </li>
           <li class="more__suggestion suggestion">
-            <i class="fas fa-beer fa-2x"></i>
+            <span class="suggestion__icon">
+              <i class="fas fa-beer"></i>
+            </span>
             <span class="suggestion__title">Friends</span>
           </li>
           <li class="more__suggestion suggestion">
-            <i class="fas fa-gamepad fa-2x"></i>
+            <span class="suggestion__icon">
+              <i class="fas fa-gamepad"></i>
+            </span>
             <span class="suggestion__title">Gem</span>
           </li>
         </ul>
@@ -111,7 +117,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
-            <i class="fas fa-comment"></i>
+            <i class="far fa-comment"></i>
           </a>
         </li>
         <li class="nav__list-item">
