--- a/find.html
+++ b/find.html
@@ -72,10 +72,7 @@
         <h5 class="find__title">Recommended Friends</h5>
         <li class="find__friend friend">
           <div class="friend__column">
-            <img
-              class="g-avatar friend__avatar friend--lg"
-              src="images/avatar.png"
-            />
+            <img class="friend__avatar friend--lg" src="images/avatar.png" />
             <div class="friend__content">
               <span class="friend__name">rebecca</span>
             </div>
